--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -20,7 +20,7 @@
 
 #abt>div>div>div {
     padding-top: 0px;
-    padding-bottom: 30px;
+    padding-bottom: 0px;
     position: relative;
 }
 
@@ -28,6 +28,23 @@
     width: 100%;
     transition: width 1s ease-out;
     transition-delay: .5s;
+}
+
+.why {
+    position: relative;
+
+    img {
+        position: absolute;
+        top: 130px;
+        right: -130px;
+        width: 80%;
+        opacity: 0.7;
+
+    }
+}
+
+.grdient {
+    padding: 0.9% 0px;
 }
 
 #about {
@@ -877,6 +894,7 @@
 
 .about-us-section h1 {
     width: 100%;
+    color: #7e7e7e;
 }
 
 .about-us-section .small-h1 {
@@ -967,8 +985,11 @@
 .client-section {
     padding-top: 10%;
     padding-bottom: 10%;
+    position: relative;
 
     .container {
+        width: 80%;
+
         h2 {
             padding: 20px 4%;
             font-size: 3em;
@@ -977,19 +998,28 @@
             text-transform: uppercase;
             font-family: 'NeueHaasDisplay-me';
         }
+
+        .parh {
+            font-size: 1.1em;
+            letter-spacing: 3px;
+            padding-right: 40%;
+            line-height: 2;
+            color: #fff;
+            margin-bottom: 2%;
+        }
     }
 
     .grid-logo {
         display: flex;
         margin-left: 0%;
         margin-top: 5%;
-        justify-content: space-evenly;
+        // justify-content: space-evenly;
         width: 100%;
         flex-wrap: wrap;
 
         .logo-item {
             width: 21%;
-            padding: 0px 4.2%;
+            padding: 0px 8.2% 0px 0px;
 
             img {
                 width: 100%;
@@ -1084,6 +1114,17 @@
     }
 }
 
+.grdient .bg-team {
+    position: absolute;
+}
+
+.client-section .bg-team {
+    position: absolute;
+    right: -25.6%;
+    top: 0;
+    width: 70%;
+    transform: rotate(-84deg);
+}
 
 #sectionPin {
     min-height: 100vh;
@@ -1121,6 +1162,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 50px 10vw;
+    position: relative;
 
 
     &>* {
@@ -1128,6 +1170,8 @@
         padding: 0vw;
         position: relative;
     }
+
+
 }
 
 .bg {
@@ -1304,7 +1348,7 @@
 
         .he {
             padding: 20px 0;
-            margin-bottom: 4%;
+            margin-bottom: 1%;
             font-size: 3em;
             color: #fff;
             letter-spacing: 1px;
@@ -2467,8 +2511,8 @@
 
 .is-inview .text_anim span {
     transform: translateY(0) skewY(0deg);
-    transition: transform 1s ease-out;
-    transition-delay: .4s;
+    transition: transform 1.1s ease-out;
+    transition-delay: .8s;
 }
 
 .is-inview .text_anim.spline_p div:nth-child(2) span {
@@ -3439,6 +3483,7 @@
 
         .about-f {
             display: block;
+            overflow: hidden;
 
             .about-p {
                 width: 100%;
