--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -436,7 +436,7 @@
             padding-right: 0%;
             line-height: 2;
             color: #1a1a1a;
-            letter-spacing: 1.5px;
+            letter-spacing: 1px;
             margin-bottom: 13%;
         }
 
@@ -868,7 +868,7 @@
 }
 
 .about-us-image {
-    width: 628px;
+    width: 570px;
     margin-top: 68px;
     // overflow: hidden;
 }
@@ -894,7 +894,7 @@
 
 .about-us-section h1 {
     width: 100%;
-    color: #7e7e7e;
+    color: #2b2b2b;
 }
 
 .about-us-section .small-h1 {
@@ -991,7 +991,7 @@
         width: 80%;
 
         h2 {
-            padding: 20px 4%;
+            padding: 20px 0%;
             font-size: 3em;
             color: #fff;
             letter-spacing: 1px;
@@ -1001,8 +1001,8 @@
 
         .parh {
             font-size: 1.1em;
-            letter-spacing: 3px;
-            padding-right: 40%;
+            letter-spacing: 1px;
+            padding-right: 10%;
             line-height: 2;
             color: #fff;
             margin-bottom: 2%;
@@ -1012,18 +1012,19 @@
     .grid-logo {
         display: flex;
         margin-left: 0%;
-        margin-top: 5%;
+        margin-top: 10%;
         // justify-content: space-evenly;
         width: 100%;
         flex-wrap: wrap;
 
         .logo-item {
-            width: 21%;
-            padding: 0px 8.2% 0px 0px;
+            width: 25%;
+            padding: 0px 3.2% 0px 0px;
 
             img {
-                width: 100%;
+                width: 60%;
                 filter: grayscale(1);
+                margin-bottom: 20%;
             }
         }
     }
@@ -1312,11 +1313,29 @@
 // marquee
 .marquees__part {
     flex-shrink: 0;
-    padding: 0 40px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
     font-smooth: always;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px;
     -webkit-text-stroke-color: #fff;
+
+    img {
+        width: 120px;
+        margin-left: 10px;
+        -webkit-animation: rotation 2s infinite linear;
+    }
+
+    @-webkit-keyframes rotation {
+        from {
+            -webkit-transform: rotate(0deg);
+        }
+
+        to {
+            -webkit-transform: rotate(359deg);
+        }
+    }
 }
 
 .marquees {
@@ -1324,7 +1343,7 @@
     color: #EEE;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 14em;
+    font-size: 10em;
     padding: 32px 0;
     position: relative;
     overflow: hidden;
@@ -1334,6 +1353,7 @@
     -webkit-font-smoothing: antialiased;
     width: fit-content;
     display: flex;
+    justify-content: center;
     flex: auto;
     flex-direction: row;
     font-family: 'NeueHaasDisplay-me';
@@ -1364,7 +1384,7 @@
 
         .parh {
             font-size: 1.1em;
-            letter-spacing: 3px;
+            letter-spacing: 1px;
             padding-right: 40%;
             line-height: 2;
             color: #fff;
@@ -3381,12 +3401,9 @@
     }
 
     .about-us-image {
-        margin-top: 10%;
+        margin-top: 5%;
     }
 
-    .about-us-images {
-        margin-top: 10%;
-    }
 
     .c-hm-us_top {
         padding-top: 1.6em;
