--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -317,8 +317,8 @@
     font-size: 4em;
     text-align: left;
     line-height: 1.2;
-    font-family: 'NeueHaasDisplay-bol';
-    cursor: pointer;
+    font-family: 'NeueHaasDisplay-me';
+    letter-spacing: 3px;
     opacity: 0;
   }
 
@@ -599,7 +599,7 @@
   }
 
   .services-s .image {
-    width: 30%;
+    width: 35%;
     /* height: 940px; */
   }
 
@@ -671,7 +671,7 @@
             position: relative;
 
             span {
-              font-size: 15px;
+              font-size: 18px;
               position: absolute;
               left: 10px;
               text-align: center;
