--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -8238,6 +8238,29 @@ header {
   .services-s .content-p {
     padding-right: 0%;
   }
+  .services-s .content-p .en-form-submit {
+    margin: 0 0 0;
+    /* overflow: hidden; */
+    /* height: 100%; */
+    text-align: left;
+    margin-bottom: 20%;
+    margin-top: 30px;
+  }
+  .services-s .content-p .en-form-submit .en-btn_send {
+    color: #1a1a1a;
+    background: 0 0;
+    border: 0;
+    border-radius: 0;
+    outline: 0 !important;
+    font-family: 'Ageo';
+    font-size: 1em;
+    letter-spacing: 1px;
+    line-height: inherit;
+    text-align: inherit;
+    text-transform: inherit;
+    text-indent: inherit;
+    text-decoration: none;
+  }
   .services-s .flex-con .fle h3 {
     font-size: 3em;
     opacity: 0;
@@ -10784,12 +10807,14 @@ header {
   margin-top: 12%;
   padding: 30px 50px;
   overflow: hidden;
+  position: relative;
+  height: 100vh;
 }
 .lets img {
   position: absolute;
-  top: 7px;
+  top: -90px;
   right: -60px;
-  width: 80%;
+  width: 68%;
   opacity: 1;
   z-index: -1;
 }
