--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -6,12 +6,14 @@
     padding:
         30px 50px;
     overflow: hidden;
+    position: relative;
+    height: 100vh;
 
     img {
         position: absolute;
-        top: 7px;
+        top: -90px;
         right: -60px;
-        width: 80%;
+        width: 68%;
         opacity: 1;
         z-index: -1;
     }
