--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -605,6 +605,31 @@
 
   .services-s .content-p {
     padding-right: 0%;
+
+    .en-form-submit {
+      margin: 0 0 0;
+      /* overflow: hidden; */
+      /* height: 100%; */
+      text-align: left;
+      margin-bottom: 20%;
+      margin-top: 30px;
+
+      .en-btn_send {
+        color: #1a1a1a;
+        background: 0 0;
+        border: 0;
+        border-radius: 0;
+        outline: 0 !important;
+        font-family: 'Ageo';
+        font-size: 1em;
+        letter-spacing: 1px;
+        line-height: inherit;
+        text-align: inherit;
+        text-transform: inherit;
+        text-indent: inherit;
+        text-decoration: none;
+      }
+    }
   }
 
   .services-s .flex-con .fle h3 {
