--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -4745,7 +4745,7 @@ header {
   top: -134px;
 }
 .about-us-image {
-  width: 570px;
+  width: 600px;
   margin-top: 68px;
 }
 .about-us-images {
@@ -4771,18 +4771,20 @@ header {
   color: #2b2b2b;
 }
 .about-us-section .small-h1 {
-  font-size: 3em;
-  line-height: 1.7;
+  font-size: 2.5em;
+  line-height: 1.73;
   text-transform: uppercase;
+  letter-spacing: 4px;
   margin-bottom: 0px;
   font-family: 'NeueHaasDisplay-me';
 }
 .about-us-section .b-h1 {
-  font-size: 5em;
-  line-height: 95px;
+  font-size: 4em;
+  line-height: 1.28;
+  letter-spacing: 6px;
   text-transform: uppercase;
   margin-bottom: 0px;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: 'NeueHaasDisplay-me-it';
 }
 .opacity-0 {
   opacity: 0;
@@ -4877,16 +4879,27 @@ header {
   width: 100%;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  text-align: center;
 }
 .client-section .grid-logo .logo-item {
   width: 25%;
-  padding: 0px 3.2% 0px 0px;
+  padding: 20px;
+  border-right: 1px solid rgba(255, 255, 255, 0.253);
+  position: relative;
 }
 .client-section .grid-logo .logo-item img {
   width: 60%;
   -webkit-filter: grayscale(1);
           filter: grayscale(1);
-  margin-bottom: 20%;
+}
+.client-section .grid-logo .bottom-border::after {
+  content: '';
+  position: absolute;
+  background: rgba(255, 255, 255, 0.253);
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
 }
 .team-section {
   padding-top: 10%;
@@ -7039,8 +7052,8 @@ header {
     margin-bottom: 110px;
   }
   .about-us-content {
-    margin-left: 20px;
-    margin-top: 12%;
+    margin-left: 110px;
+    margin-top: 7%;
   }
   .c-hm-us_top {
     padding-top: 0.6em;
@@ -10821,6 +10834,11 @@ header {
 .lets .flex-row h1 {
   font-family: 'NeueHaasDisplay-me';
   font-size: 9em;
+  overflow: hidden;
+}
+.lets .flex-row h1 .l {
+  display: inline-block;
+  font-family: 'NeueHaasDisplay-me' !important;
 }
 .lets .flex-row .sec-h1 {
   text-align: right;
@@ -11041,6 +11059,8 @@ header {
 .contact-inner .gform_wrapper form .gform_footer input[type="submit"] span img,
 .gform_wrapper form .gform_footer #gform_submit_button_2 span img {
   width: 8px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .contact-inner .gform_wrapper form .gform_footer input[type="submit"] em,
 .gform_wrapper form .gform_footer #gform_submit_button_2 em {
@@ -11075,7 +11095,7 @@ header {
   height: 225%;
 }
 .contact-inner .gform_wrapper .gform_footer {
-  margin: 96px 0 0;
+  margin: 36px 0 0;
   padding: 0px;
 }
 @media only screen and (min-width: 1680px) {
