--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -22,6 +22,12 @@
         h1 {
             font-family: 'NeueHaasDisplay-me';
             font-size: 9em;
+            overflow: hidden;
+
+            .l {
+                display: inline-block;
+                font-family: 'NeueHaasDisplay-me' !important;
+            }
         }
 
         .sec-h1 {
@@ -242,6 +248,7 @@
 
     img {
         width: 8px;
+        transition: all 0.3s ease-in-out;
     }
 }
 
@@ -280,7 +287,7 @@
 }
 
 .contact-inner .gform_wrapper .gform_footer {
-    margin: 96px 0 0;
+    margin: 36px 0 0;
     padding: 0px;
 }
 
