--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -1338,9 +1338,10 @@
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px;
     -webkit-text-stroke-color: #fff;
+    letter-spacing: 9px;
 
     img {
-        width: 120px;
+        width: 130px;
         margin-left: 10px;
         -webkit-animation: rotation 7s infinite linear;
     }
